src/generated/src/SourcePatternsParser.py
# Generated from src/SourcePatterns.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SourcePatternsParser ( Parser ):

    grammarFileName = "SourcePatterns.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "','", "':'", "'='", "'List<'",
                     "'>'", "'['", "']'", "'('", "')'", "'pattern'", "'instance'",
                     "'of'", "'meta'", "'parameter'", "'call'", "'assign'",
                     "'return'", "'raw'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "PATTERN", "INSTANCE", "OF", "META", "PARAMETER",
                      "CALL", "ASSIGN", "RETURN", "RAW", "IDENTIFIER", "STRING",
                      "NUMBER", "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_patternDefinition = 1
    RULE_instanceDefinition = 2
    RULE_anonymousInstance = 3
    RULE_metaDefinition = 4
    RULE_parameterDefinition = 5
    RULE_assignment = 6
    RULE_type = 7
    RULE_value = 8
    RULE_listLiteral = 9
    RULE_block = 10
    RULE_instruction = 11
    RULE_callInstruction = 12
    RULE_assignInstruction = 13
    RULE_returnInstruction = 14
    RULE_rawInstruction = 15

    ruleNames =  [ "program", "patternDefinition", "instanceDefinition",
                   "anonymousInstance", "metaDefinition", "parameterDefinition",
                   "assignment", "type", "value", "listLiteral", "block",
                   "instruction", "callInstruction", "assignInstruction",
                   "returnInstruction", "rawInstruction" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    PATTERN=12
    INSTANCE=13
    OF=14
    META=15
    PARAMETER=16
    CALL=17
    ASSIGN=18
    RETURN=19
    RAW=20
    IDENTIFIER=21
    STRING=22
    NUMBER=23
    WS=24
    LINE_COMMENT=25
    BLOCK_COMMENT=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SourcePatternsParser.EOF, 0)

        def patternDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SourcePatternsParser.PatternDefinitionContext)
            else:
                return self.getTypedRuleContext(SourcePatternsParser.PatternDefinitionContext,i)


        def instanceDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SourcePatternsParser.InstanceDefinitionContext)
            else:
                return self.getTypedRuleContext(SourcePatternsParser.InstanceDefinitionContext,i)


        def getRuleIndex(self):
            return SourcePatternsParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SourcePatternsParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12 or _la==13:
                self.state = 34
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [12]:
                    self.state = 32
                    self.patternDefinition()
                    pass
                elif token in [13]:
                    self.state = 33
                    self.instanceDefinition()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 39
            self.match(SourcePatternsParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PatternDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PATTERN(self):
            return self.getToken(SourcePatternsParser.PATTERN, 0)

        def IDENTIFIER(self):
            return self.getToken(SourcePatternsParser.IDENTIFIER, 0)

        def metaDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SourcePatternsParser.MetaDefinitionContext)
            else:
                return self.getTypedRuleContext(SourcePatternsParser.MetaDefinitionContext,i)


        def parameterDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SourcePatternsParser.ParameterDefinitionContext)
            else:
                return self.getTypedRuleContext(SourcePatternsParser.ParameterDefinitionContext,i)


        def getRuleIndex(self):
            return SourcePatternsParser.RULE_patternDefinition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPatternDefinition" ):
                return visitor.visitPatternDefinition(self)
            else:
                return visitor.visitChildren(self)




    def patternDefinition(self):

        localctx = SourcePatternsParser.PatternDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_patternDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(SourcePatternsParser.PATTERN)
            self.state = 42
            self.match(SourcePatternsParser.IDENTIFIER)
            self.state = 43
            self.match(SourcePatternsParser.T__0)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15 or _la==16:
                self.state = 46
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [15]:
                    self.state = 44
                    self.metaDefinition()
                    pass
                elif token in [16]:
                    self.state = 45
                    self.parameterDefinition()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 51
            self.match(SourcePatternsParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstanceDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSTANCE(self):
            return self.getToken(SourcePatternsParser.INSTANCE, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(SourcePatternsParser.IDENTIFIER)
            else:
                return self.getToken(SourcePatternsParser.IDENTIFIER, i)

        def OF(self):
            return self.getToken(SourcePatternsParser.OF, 0)

        def metaDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SourcePatternsParser.MetaDefinitionContext)
            else:
                return self.getTypedRuleContext(SourcePatternsParser.MetaDefinitionContext,i)


        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SourcePatternsParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(SourcePatternsParser.AssignmentContext,i)


        def anonymousInstance(self):
            return self.getTypedRuleContext(SourcePatternsParser.AnonymousInstanceContext,0)


        def getRuleIndex(self):
            return SourcePatternsParser.RULE_instanceDefinition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstanceDefinition" ):
                return visitor.visitInstanceDefinition(self)
            else:
                return visitor.visitChildren(self)




    def instanceDefinition(self):

        localctx = SourcePatternsParser.InstanceDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instanceDefinition)
        self._la = 0 # Token type
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.match(SourcePatternsParser.INSTANCE)
                self.state = 54
                self.match(SourcePatternsParser.IDENTIFIER)
                self.state = 55
                self.match(SourcePatternsParser.OF)
                self.state = 56
                self.match(SourcePatternsParser.IDENTIFIER)
                self.state = 57
                self.match(SourcePatternsParser.T__0)
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2129928) != 0):
                    self.state = 61
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [15]:
                        self.state = 58
                        self.metaDefinition()
                        pass
                    elif token in [21]:
                        self.state = 59
                        self.assignment()
                        pass
                    elif token in [3]:
                        self.state = 60
                        self.match(SourcePatternsParser.T__2)
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 65
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 66
                self.match(SourcePatternsParser.T__1)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.anonymousInstance()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnonymousInstanceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSTANCE(self):
            return self.getToken(SourcePatternsParser.INSTANCE, 0)

        def OF(self):
            return self.getToken(SourcePatternsParser.OF, 0)

        def IDENTIFIER(self):
            return self.getToken(SourcePatternsParser.IDENTIFIER, 0)

        def metaDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SourcePatternsParser.MetaDefinitionContext)
            else:
                return self.getTypedRuleContext(SourcePatternsParser.MetaDefinitionContext,i)


        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SourcePatternsParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(SourcePatternsParser.AssignmentContext,i)


        def getRuleIndex(self):
            return SourcePatternsParser.RULE_anonymousInstance

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnonymousInstance" ):
                return visitor.visitAnonymousInstance(self)
            else:
                return visitor.visitChildren(self)




    def anonymousInstance(self):

        localctx = SourcePatternsParser.AnonymousInstanceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_anonymousInstance)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(SourcePatternsParser.INSTANCE)
            self.state = 71
            self.match(SourcePatternsParser.OF)
            self.state = 72
            self.match(SourcePatternsParser.IDENTIFIER)
            self.state = 73
            self.match(SourcePatternsParser.T__0)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2129928) != 0):
                self.state = 77
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [15]:
                    self.state = 74
                    self.metaDefinition()
                    pass
                elif token in [21]:
                    self.state = 75
                    self.assignment()
                    pass
                elif token in [3]:
                    self.state = 76
                    self.match(SourcePatternsParser.T__2)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self.match(SourcePatternsParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MetaDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def META(self):
            return self.getToken(SourcePatternsParser.META, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(SourcePatternsParser.IDENTIFIER)
            else:
                return self.getToken(SourcePatternsParser.IDENTIFIER, i)

        def STRING(self):
            return self.getToken(SourcePatternsParser.STRING, 0)

        def getRuleIndex(self):
            return SourcePatternsParser.RULE_metaDefinition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetaDefinition" ):
                return visitor.visitMetaDefinition(self)
            else:
                return visitor.visitChildren(self)




    def metaDefinition(self):

        localctx = SourcePatternsParser.MetaDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_metaDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(SourcePatternsParser.META)
            self.state = 85
            self.match(SourcePatternsParser.IDENTIFIER)
            self.state = 86
            self.match(SourcePatternsParser.T__3)
            self.state = 87
            _la = self._input.LA(1)
            if not(_la==21 or _la==22):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(SourcePatternsParser.PARAMETER, 0)

        def IDENTIFIER(self):
            return self.getToken(SourcePatternsParser.IDENTIFIER, 0)

        def type_(self):
            return self.getTypedRuleContext(SourcePatternsParser.TypeContext,0)


        def getRuleIndex(self):
            return SourcePatternsParser.RULE_parameterDefinition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterDefinition" ):
                return visitor.visitParameterDefinition(self)
            else:
                return visitor.visitChildren(self)




    def parameterDefinition(self):

        localctx = SourcePatternsParser.ParameterDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameterDefinition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(SourcePatternsParser.PARAMETER)
            self.state = 90
            self.match(SourcePatternsParser.IDENTIFIER)
            self.state = 91
            self.match(SourcePatternsParser.T__3)
            self.state = 92
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(SourcePatternsParser.IDENTIFIER, 0)

        def value(self):
            return self.getTypedRuleContext(SourcePatternsParser.ValueContext,0)


        def getRuleIndex(self):
            return SourcePatternsParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = SourcePatternsParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(SourcePatternsParser.IDENTIFIER)
            self.state = 95
            self.match(SourcePatternsParser.T__4)
            self.state = 96
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(SourcePatternsParser.IDENTIFIER, 0)

        def type_(self):
            return self.getTypedRuleContext(SourcePatternsParser.TypeContext,0)


        def getRuleIndex(self):
            return SourcePatternsParser.RULE_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = SourcePatternsParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_type)
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(SourcePatternsParser.IDENTIFIER)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.match(SourcePatternsParser.T__5)
                self.state = 100
                self.type_()
                self.state = 101
                self.match(SourcePatternsParser.T__6)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(SourcePatternsParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(SourcePatternsParser.NUMBER, 0)

        def IDENTIFIER(self):
            return self.getToken(SourcePatternsParser.IDENTIFIER, 0)

        def listLiteral(self):
            return self.getTypedRuleContext(SourcePatternsParser.ListLiteralContext,0)


        def anonymousInstance(self):
            return self.getTypedRuleContext(SourcePatternsParser.AnonymousInstanceContext,0)


        def block(self):
            return self.getTypedRuleContext(SourcePatternsParser.BlockContext,0)


        def getRuleIndex(self):
            return SourcePatternsParser.RULE_value

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = SourcePatternsParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_value)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(SourcePatternsParser.STRING)
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(SourcePatternsParser.NUMBER)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.match(SourcePatternsParser.IDENTIFIER)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 108
                self.listLiteral()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 5)
                self.state = 109
                self.anonymousInstance()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 6)
                self.state = 110
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SourcePatternsParser.ValueContext)
            else:
                return self.getTypedRuleContext(SourcePatternsParser.ValueContext,i)


        def getRuleIndex(self):
            return SourcePatternsParser.RULE_listLiteral

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListLiteral" ):
                return visitor.visitListLiteral(self)
            else:
                return visitor.visitChildren(self)




    def listLiteral(self):

        localctx = SourcePatternsParser.ListLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_listLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(SourcePatternsParser.T__7)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 14688514) != 0):
                self.state = 114
                self.value()
                self.state = 119
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 115
                        self.match(SourcePatternsParser.T__2)
                        self.state = 116
                        self.value()
                    self.state = 121
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 122
                    self.match(SourcePatternsParser.T__2)




            self.state = 127
            self.match(SourcePatternsParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SourcePatternsParser.InstructionContext)
            else:
                return self.getTypedRuleContext(SourcePatternsParser.InstructionContext,i)


        def getRuleIndex(self):
            return SourcePatternsParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = SourcePatternsParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(SourcePatternsParser.T__0)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1966080) != 0):
                self.state = 130
                self.instruction()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 136
            self.match(SourcePatternsParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def callInstruction(self):
            return self.getTypedRuleContext(SourcePatternsParser.CallInstructionContext,0)


        def assignInstruction(self):
            return self.getTypedRuleContext(SourcePatternsParser.AssignInstructionContext,0)


        def returnInstruction(self):
            return self.getTypedRuleContext(SourcePatternsParser.ReturnInstructionContext,0)


        def rawInstruction(self):
            return self.getTypedRuleContext(SourcePatternsParser.RawInstructionContext,0)


        def getRuleIndex(self):
            return SourcePatternsParser.RULE_instruction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = SourcePatternsParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_instruction)
        try:
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.callInstruction()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.assignInstruction()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.returnInstruction()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 4)
                self.state = 141
                self.rawInstruction()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallInstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CALL(self):
            return self.getToken(SourcePatternsParser.CALL, 0)

        def IDENTIFIER(self):
            return self.getToken(SourcePatternsParser.IDENTIFIER, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SourcePatternsParser.ValueContext)
            else:
                return self.getTypedRuleContext(SourcePatternsParser.ValueContext,i)


        def getRuleIndex(self):
            return SourcePatternsParser.RULE_callInstruction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallInstruction" ):
                return visitor.visitCallInstruction(self)
            else:
                return visitor.visitChildren(self)




    def callInstruction(self):

        localctx = SourcePatternsParser.CallInstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_callInstruction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(SourcePatternsParser.CALL)
            self.state = 145
            self.match(SourcePatternsParser.IDENTIFIER)
            self.state = 146
            self.match(SourcePatternsParser.T__9)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 14688514) != 0):
                self.state = 147
                self.value()
                self.state = 152
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 148
                        self.match(SourcePatternsParser.T__2)
                        self.state = 149
                        self.value()
                    self.state = 154
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 155
                    self.match(SourcePatternsParser.T__2)




            self.state = 160
            self.match(SourcePatternsParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignInstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(SourcePatternsParser.ASSIGN, 0)

        def IDENTIFIER(self):
            return self.getToken(SourcePatternsParser.IDENTIFIER, 0)

        def value(self):
            return self.getTypedRuleContext(SourcePatternsParser.ValueContext,0)


        def getRuleIndex(self):
            return SourcePatternsParser.RULE_assignInstruction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignInstruction" ):
                return visitor.visitAssignInstruction(self)
            else:
                return visitor.visitChildren(self)




    def assignInstruction(self):

        localctx = SourcePatternsParser.AssignInstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_assignInstruction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(SourcePatternsParser.ASSIGN)
            self.state = 163
            self.match(SourcePatternsParser.IDENTIFIER)
            self.state = 164
            self.match(SourcePatternsParser.T__4)
            self.state = 165
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnInstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(SourcePatternsParser.RETURN, 0)

        def value(self):
            return self.getTypedRuleContext(SourcePatternsParser.ValueContext,0)


        def getRuleIndex(self):
            return SourcePatternsParser.RULE_returnInstruction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnInstruction" ):
                return visitor.visitReturnInstruction(self)
            else:
                return visitor.visitChildren(self)




    def returnInstruction(self):
